2007-07-03  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/TypedefNodeBuilder.cs, Navigation/StructureNodeBuilder.cs,
	  Navigation/Function.cs, Navigation/Enumeration.cs,
	  Navigation/TagDatabaseManager.cs,
	  Navigation/ProjectNavigationInformation.cs,
	  Navigation/GlobalsNodeBuilder.cs, Navigation/Member.cs,
	  Navigation/Tag.cs, Navigation/ClassNodeBuilder.cs,
	  Navigation/Union.cs, Navigation/Structure.cs,
	  Navigation/Typedef.cs, Navigation/FunctionNodeBuilder.cs,
	  Navigation/LanguageItem.cs, Navigation/Class.cs,
	  Navigation/UnionNodeBuilder.cs, Navigation/NamespaceNodeBuilder.cs,
	  gtk-gui/gui.stetic, Makefile.am, CBinding.addin.xml,
	  icons/Icons.16x16.ProtectedUnion, icons/Icons.16x16.PrivateUnion,
	  icons/Icons.16x16.Union, CBinding.mdp: Added support for typedefs
	  and unions in the class pad.

2007-07-02  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/Tag.cs, Navigation/StructureNodeBuilder.cs,
	  Navigation/Enumerator.cs, Navigation/ClassNodeBuilder.cs,
	  Navigation/Enumeration.cs, Navigation/TagDatabaseManager.cs,
	  Navigation/ProjectNavigationInformation.cs,
	  Navigation/EnumeratorNodeBuilder.cs,
	  Navigation/GlobalsNodeBuilder.cs, Navigation/LanguageItem.cs,
	  Navigation/EnumerationNodeBuilder.cs,
	  Navigation/NamespaceNodeBuilder.cs, Makefile.am,
	  CBinding.addin.xml, CBinding.mdp: Added support for enumerations
	  and their respective enumerators in the class pad.
	* Navigation/LanguageItemCommandHandler.cs: Small change which fixes a
	  bug when double clicking a macro definition.

2007-07-02  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* CBinding.addin.xml: Fixed a typo.

2007-07-02  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/Tag.cs, Navigation/MacroNodeBuilder.cs,
	  Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/TagDatabaseManager.cs,
	  Navigation/ProjectNavigationInformation.cs,
	  Navigation/GlobalsNodeBuilder.cs, Navigation/Macro.cs,