@@ -90,6 +90,7 @@
     <File name="./icons/Icons.16x16.Union" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./Navigation/Typedef.cs" subtype="Code" buildaction="Compile" />
     <File name="./Navigation/TypedefNodeBuilder.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Navigation/LanguageItemEventArgs.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
